--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -102,7 +102,7 @@
         </activity>
 
         <activity
-            android:name="com.android.launcher3.MultiSelectRecyclerViewActivity"
+            android:name="com.android.launcher3.HiddenAppsActivity"
             android:autoRemoveFromRecents="true"
             android:label="@string/hidden_app"
             android:theme="@android:style/Theme.DeviceDefault.Settings"/>
